<RelativeLayout tools:ignore="MissingDefaultResource" android:orientation="vertical" android:layout_centerVertical="true" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView android:layout_height="45dp" android:layout_width="92.5dp" android:src="@drawable/quiz" android:contentDescription="logoGame" android:id="@+id/quiz"/>

    <TextView android:layout_height="55dp" android:layout_width="wrap_content" android:id="@+id/creationCarte" android:textAppearance="@style/TextAppearance.AppCompat.Large" android:text="@string/page_creation_card" android:layout_centerHorizontal="true" android:layout_below="@+id/quiz"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/poserQuestion" android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:text="@string/enter_question" android:layout_below="@+id/creationCarte"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/question" android:layout_below="@+id/poserQuestion" android:visibility="visible" android:inputType="textAutoCorrect" android:autofillHints="username"/>

    <TextView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/ajouterReponse" android:textAppearance="@style/TextAppearance.AppCompat.Body2" android:text="@string/add_answer" android:layout_below="@+id/question"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/answer1" android:layout_below="@+id/ajouterReponse" android:visibility="visible" android:inputType="textAutoCorrect" android:autofillHints="username"/>

    <CheckBox tools:ignore="MissingConstraints" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/checkAnswer1" android:text="@string/vrai" android:layout_below="@+id/answer1" tools:layout_editor_absoluteY="409dp" tools:layout_editor_absoluteX="166dp" android:onClick="onCheckBoxClicked" android:checked="false"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/answer2" android:layout_below="@+id/checkAnswer1" android:visibility="visible" android:inputType="textAutoCorrect" android:autofillHints="username"/>

    <CheckBox tools:ignore="MissingConstraints" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/checkAnswer2" android:text="@string/vrai" android:layout_below="@+id/answer2" tools:layout_editor_absoluteY="409dp" tools:layout_editor_absoluteX="166dp" android:onClick="onCheckBoxClicked" android:checked="false"/>

    <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/answer3" android:layout_below="@+id/checkAnswer2" android:visibility="visible" android:inputType="textAutoCorrect" android:autofillHints="username"/>

    <CheckBox tools:ignore="MissingConstraints" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/checkAnswer3" android:text="@string/vrai" android:layout_below="@+id/answer3" tools:layout_editor_absoluteY="409dp" tools:layout_editor_absoluteX="166dp" android:onClick="onCheckBoxClicked" android:checked="false"/>

    <Button
        android:id="@+id/validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkAnswer3"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:text="@string/jouer" />

    <Button
        android:id="@+id/retour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/validate"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:text="@string/terminate" />


</RelativeLayout>