<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerVertical="true"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/close"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginLeft="330dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="#E6FFFFFF"
            android:onClick="fermerTuto"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:tint="#F3332828" />

        <TextView
            android:id="@+id/welcomeTuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/close"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/welcome_tuto"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/intro_card_tuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcomeTuto"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/intro_card_tuto"
            android:textAlignment="center"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/bouton_card"
            android:layout_width="126dp"
            android:layout_height="39dp"
            android:layout_below="@+id/welcomeTuto"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="25dp"
            app:srcCompat="@drawable/cardsbutton" />

        <ImageView
            android:id="@+id/swipeLeft"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/intro_card_tuto"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/swipeleft" />

        <TextView
            android:id="@+id/swipeCardLeft"
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:layout_below="@+id/intro_card_tuto"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/swipe_card_left" />

        <ImageView
            android:id="@+id/swipeUp"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_below="@+id/swipeLeft"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/swipeup" />

        <TextView
            android:id="@+id/swipeCardRight"
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:layout_below="@+id/swipeLeft"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/swipe_up" />

        <TextView
            android:id="@+id/intro_deck_tuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/swipeUp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="34dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/intro_deck_tuto"
            android:textAlignment="center"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/bouton_create_deck"
            android:layout_width="126dp"
            android:layout_height="39dp"
            android:layout_below="@+id/swipeUp"
            android:layout_marginLeft="200dp"
            android:layout_marginTop="35dp"
            app:srcCompat="@drawable/createdeck" />

        <ImageView
            android:id="@+id/swipeLeftDeck"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/intro_deck_tuto"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/swipeleft" />

        <TextView
            android:id="@+id/swipeDeckLeft"
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:layout_below="@+id/intro_deck_tuto"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/swipe_deck_left" />

        <ImageView
            android:id="@+id/swipeRightDeck"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/swipeLeftDeck"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/swiperight" />

        <TextView
            android:id="@+id/swipeDeckRight"
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:layout_below="@+id/swipeLeftDeck"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/swipe_deck_right" />

        <ImageView
            android:id="@+id/swipeUpDeck"
            android:layout_width="51dp"
            android:layout_height="51dp"
            android:layout_below="@+id/swipeRightDeck"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/swipeup" />

        <TextView
            android:id="@+id/swipeDeckUp"
            android:layout_width="230dp"
            android:layout_height="80dp"
            android:layout_below="@+id/swipeRightDeck"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/swipe_deck_up" />

    </RelativeLayout>
</ScrollView>