<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreerCarteQuestionSon">


    <TextView
        android:id="@+id/titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/carte"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="18sp" />


    <ImageView
        android:id="@+id/micImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/titre"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@android:drawable/presence_audio_online" />

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/micImage"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

    <Button
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:text="@string/play_audio" />


    <Button
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginLeft="5dp"
        android:text="@string/stop_audio" />
</LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear2"
        android:layout_marginTop="20dp"
        android:cacheColorHint="#00000000"
        android:fontFamily="@font/montserrat_alternates" />

</RelativeLayout>