<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/close"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginLeft="330dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="#E6FFFFFF"
        android:onClick="fermer"
        android:src="@android:drawable/ic_menu_close_clear_cancel"
        android:tint="#F3332828" />

    <TextView
        android:id="@+id/beware"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/close"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/beware"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/exceptionCard1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/beware"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="35dp"
        android:text="@string/exceptionCard1"></TextView>

    <ImageView
        android:id="@+id/card"
        android:layout_width="126dp"
        android:layout_height="39dp"
        android:layout_below="@+id/beware"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="25dp"
        app:srcCompat="@drawable/cardsbutton" />

    <TextView
        android:id="@+id/exceptionCard2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:text="@string/exceptionCard2"
        android:layout_below="@+id/exceptionCard1"></TextView>

    <ImageView
        android:id="@+id/createCard"
        android:layout_width="126dp"
        android:layout_height="41dp"
        android:layout_below="@+id/exceptionCard1"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="70dp"
        app:srcCompat="@drawable/cardbutton" />

</RelativeLayout>